# math-notes

./: .gitignore  404.html  README.md  index.html  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
_build/notebooks/odes/simple_numerical_solution_plot/: index.html
about/: index.html
apps/: hotcold.py
docs/: about.md  roadmap.md
docs/odes/: index.md
fourier/: index.html
notebooks/odes/: simple_numerical_solution_plot.py
numerical/: index.html
odes/: index.html
pdes/: index.html
roadmap/: index.html
scripts/: export_marimo.py
search/: search_index.json
stylesheets/: tasklist.css
templates/: index.html.j2  tailwind.html.j2
